--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /* Write your CSS here! */
+body {
+    background-color: rgb(116, 7, 7);
+    margin: 8px;
+    display: block;
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  p {
+    font-family: Arial;
+    font-size: 15px;
+
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .funParagraph {
+    color: green;
+  }
+
+  img {
+    max-width: 1000px;
+    object-fit: contain;
+  }
+
+  #mainHeading {
+    color: red;
+  }
